=======
CHANGES
=======

3.0.1 (unreleased)
------------------

- Nothing changed yet.


3.0.0 (2015-11-09)
------------------

- Standardize namespace __init__

- Split config, mostly to be able to include in pyramid without browser
  resources and viewlets


3.0.0a2 (2013-02-26)
--------------------

- Added missing version Trove classifiers.


3.0.0a1 (2013-02-25)
--------------------

- Added support for Python 3.3.

- Dropped support for Python 2.4 and 2.5.


2.3.0 (2012-03-15)
------------------

- Feature: Mark a widget row with the "required" class when the widget is
  required. Similarly, when the widget has an error attached, add the "error"
  class to the widget row. That allows you to change the styles of the label
  and the widget if it is reuqired.


2.2.1 (2012-01-09)
------------------

- No longer using deprecated ``zope.testing.doctest`` but built-in
  ``doctest`` instead.

- Fixed tests so they do not break for `z3c.form` 2.5.0.


2.2.0 (2009-12-28)
------------------

- Fixed tests so they do not break for `z3c.form` 2.2.0.

- Using ``requiredInfo`` property (introduced in `z3c.form` 2.0.0) to
  render the information about required fields. This property returns
  an i18n message id making the information translateable.

- Added support for groups containing groups: They get displayed now.

2.1.0 (2009-09-01)
------------------

- Feature: Don't show required info hint if there's no required fields.

- Bug: Don't render add forms when redirecting as well.

- Bug: Fix redirection tests with newer zope.publisher that restricts
  untrusted redirects to different domains.

2.0.0 (2009-06-14)
------------------

- Feature: Added support for context-specific template lookup, introduced in
  `z3c.template` 1.2.0 - templates can now be registered using (view, request,
  context) discriminator.

- Feature: Added support for `z3c.pt` templates using `z3c.ptcompat`
  compatibility package.
