@@ -2,7 +2,7 @@
 __pycache__
 src/*.egg-info
 benchmark/*.egg-info
-
+.idea
 .installed.cfg
 .tox
 bin
