@@ -1,9 +1,10 @@
 language: python
 sudo: false
 env:
-    - TOXENV=py26
     - TOXENV=py27
-    - TOXENV=py33
+    - TOXENV=py34
+    - TOXENV=py35
+    - TOXENV=py36
 install:
     - travis_retry pip install tox
 script:
