@@ -1,6 +1,6 @@
 [tox]
 envlist =
-    py26,py27,py33
+    py27,py34,py35,py36
 
 [testenv]
 commands =
