@@ -5,7 +5,9 @@ CHANGES
 3.0.1 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Added support for Python 3.4, 3.5 and 3.6.
+
+- Dropped support for Python 2.6 and 3.3.
 
 
 3.0.0 (2015-11-09)
